--- a/get_next_line/.vscode/launch.json
+++ b/get_next_line/.vscode/launch.json
@@ -30,6 +30,34 @@
 					"ignoreFailures": true
 				}
 			]
+		},
+		{
+			"name": "Bonus",
+			"type": "cppdbg",
+			"request": "launch",
+			"program": "${workspaceFolder}/get_next_line_bonus.out",
+			"args": [
+				"${workspaceFolder}/variable_nls.txt",
+				"${workspaceFolder}/test.txt"
+			],
+			"stopAtEntry": true,
+			"cwd": "${workspaceFolder}",
+			"environment": [],
+			"externalConsole": false,
+			"MIMode": "gdb",
+			"preLaunchTask": "bonus",
+			"setupCommands": [
+				{
+					"description": "Enable pretty-printing for gdb",
+					"text": "-enable-pretty-printing",
+					"ignoreFailures": true
+				},
+				{
+					"description": "Set Disassembly Flavor to Intel",
+					"text": "-gdb-set disassembly-flavor intel",
+					"ignoreFailures": true
+				}
+			]
 		}
 	]
 }
