Add debug config

--- a/ft_printf/.vscode/launch.json
+++ b/ft_printf/.vscode/launch.json
@@ -9,6 +9,7 @@
 			"type": "cppdbg",
 			"request": "launch",
 			"program": "${workspaceFolder}/ft_printf.out",
+			"preLaunchTask": "make",
 			"args": [],
 			"stopAtEntry": true,
 			"cwd": "${workspaceFolder}",
