--- a/ft_printf/project/Makefile
+++ b/ft_printf/project/Makefile
@@ -1,6 +1,5 @@
 NAME=libftprintf.a
 
-# Commands
 CC=cc
 CFLAGS=-Wall -Wextra -Werror
 
@@ -10,21 +9,16 @@ ARFLAGS=rcs
 RM=rm
 RMFLAGS=-f
 
-# files
-
 SRC = ft_printf.c \
 	ft_print_str.c \
-	ft_print_nbr.c \
+	ft_print_nbr.c
 
 OBJ = $(SRC:.c=.o)
-
-# Rules
 
 all: $(NAME)
 
 $(NAME): $(OBJ)
 	$(AR) $(ARFLAGS) $@ $^
-
 
 clean:
 	$(RM) $(RMFLAGS) $(OBJ)
